fixed resized cropping

--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -3631,11 +3631,7 @@ table.stats td:last-of-type {
 }
 
 #preview {
-  overflow: hidden;
-}
-#upload {
   img {
-    max-width: 100% !important;
-    max-height: 75vh !important;
+    max-width: 100%;
   }
 }
